--- a/TCPWebClinica/WebApp/MasterPage.Master
+++ b/TCPWebClinica/WebApp/MasterPage.Master
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="Content/Style/StyleMasterPage.css" rel="stylesheet" />
-   
+
 </head>
 <body>
     <form id="form1" runat="server">
@@ -24,10 +24,28 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav me-auto">
-                        
+
                             <li class="nav-item">
                                 <a class="nav-link" href="Productos.aspx">Home</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Cartilla.aspx">Cartilla</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="Turnos.aspx">Turnos</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="Pacientes.aspx">Pacientes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Recepcionistas.aspx">Recepcionistas</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Obras Sociales.aspx">Obras Sociales</a>
+                            </li>
+
                         </ul>
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
@@ -42,7 +60,6 @@
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
             <footer>
-            
             </footer>
         </div>
 
