Abm medico prueba

--- a/TCPWebClinica/WebApp/MasterPage.Master
+++ b/TCPWebClinica/WebApp/MasterPage.Master
@@ -18,7 +18,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="Default.aspx">Mi Tienda</a>
+                    <a class="navbar-brand" href="Default.aspx">Clinica</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -27,6 +27,9 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" href="Productos.aspx">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Cartilla.aspx">Cartilla</a>
                             </li>
                            
 
