--- a/TCPWebClinica/WebApp/MasterPage.Master
+++ b/TCPWebClinica/WebApp/MasterPage.Master
@@ -33,6 +33,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="Pacientes.aspx">Pacientes</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="ObrasSociales.aspx">Obras Sociales</a>
+                            </li>
                         </ul>
 
                     </div>
