--- a/TCPWebClinica/WebApp/MasterPage.Master
+++ b/TCPWebClinica/WebApp/MasterPage.Master
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="Turno.aspx">Turnos</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Usuarios.aspx">Usuarios</a>
+                            </li>
                         </ul>
 
                     </div>
