--- a/TCPWebClinica/WebApp/MasterPage.Master
+++ b/TCPWebClinica/WebApp/MasterPage.Master
@@ -42,6 +42,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="Usuarios.aspx">Usuarios</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Especialidades.aspx">Especialidades</a>
+                            </li>
+
                         </ul>
 
                     </div>
