--- a/TCPWebClinica/WebApp/MasterPage.Master
+++ b/TCPWebClinica/WebApp/MasterPage.Master
@@ -25,6 +25,12 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
+                                <a class="nav-link" href="Administradores.aspx">Administradores</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Recepcionistas.aspx">Recepcionistas</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="Cartilla.aspx">Cartilla</a>
                             </li>
                             <li class="nav-item">
