--- a/TCPWebClinica/WebApp/MasterPage.Master
+++ b/TCPWebClinica/WebApp/MasterPage.Master
@@ -17,6 +17,14 @@
     <form id="form1" runat="server">
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+              <div class="container-fluid">
+                <a class="navbar-brand">Clinica</a>
+                <div class="d-flex" role="search">
+                    <asp:Button ID="btnCerrarSesion" cssclass="btn btn-dark ps-3 pe-3" runat="server" Text="Cerrar sesion" OnClick="btnCerrarSesion_Click" />
+                </div>
+              </div>
+            </nav>
+            <%--<nav class="navbar navbar-expand-lg navbar-dark bg-success">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="Default.aspx">Clinica</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +63,7 @@
 
                     </div>
                 </div>
-            </nav>
+            </nav>--%>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
             <footer>
