--- a/TCPWebClinica/WebApp/MasterPage.Master
+++ b/TCPWebClinica/WebApp/MasterPage.Master
@@ -18,7 +18,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
               <div class="container-fluid">
-                <a class="navbar-brand">Clinica</a>
+                <a class="navbar-brand" href="Default.aspx">Clinica</a>
                 <div class="d-flex" role="search">
                     <asp:Button ID="btnCerrarSesion" cssclass="btn btn-dark ps-3 pe-3" runat="server" Text="Cerrar sesion" OnClick="btnCerrarSesion_Click" />
                 </div>
